# instahuskee

./: .gitignore  README.md  instahuskee.cabal
app/: Config.hs  Main.hs
src/: InstaHuskee.hs
src/Web/: Application.hs  Router.hs
