name:                instahuskee
version:             0.1.0.0
synopsis:            IG HTTP Client
description:         Please see README.md
homepage:            http://github.com/dzotokan/instahuskee#readme
license:             MIT
license-file:        LICENSE
author:              Daniel S
maintainer:          standeo+github@gmail.com
copyright:           2016 Daniel S
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     InstaHuskee
  build-depends:       base >= 4.7 && < 5
                     , text
                     , http-client
                     , http-client-tls
                     , http-types
                     , transformers
                     , resourcet
                     , ig
  default-language:    Haskell2010
  ghc-options:         -Wall -W

executable instahuskee-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , instahuskee
  default-language:    Haskell2010

test-suite instahuskee-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , instahuskee
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dzotokan/instahuskee
